--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <div class="banner-content">
             <picture>
-                <img src="./assets/images/logo.png" alt="Logotipo trilha de CSS DIO">
+                <img id="logo-dio-top" src="./assets/images/logo.png" alt="Logotipo trilha de CSS DIO">
             </picture>
-            
+    
             <h1>Trilha de CSS da dio</h1>
             <p>A nova trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais</p>
             <button id="subscribe-button">Quero me inscrever</button>
@@ -21,22 +21,24 @@
 
     <main>
         <section id="course-content">
-            <h2>O que vou aprender?</h2>
-            <p>Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.</p>
-            <div class="module-list">
-                <button class="module-button">
-                    Módulo 01: primeiros passos com CSS
-                </button>
-                <button class="module-button">
-                    Módulo 02: trabalhando com layouts no CSS
-                </button>
-                <button class="module-button">
-                    Módulo 03: refinando os estilos CSS das nossas páginas
-                </button>
+            <div class="section-content">
+                <h2>O que vou aprender?</h2>
+                <p>Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.</p>
+                <div class="module-list">
+                    <button class="module-button">
+                        <span>Módulo 01:</span> primeiros passos com CSS
+                    </button>
+                    <button class="module-button">
+                        <span>Módulo 02:</span> trabalhando com layouts no CSS
+                    </button>
+                    <button class="module-button">
+                        <span>Módulo 03:</span> refinando os estilos CSS das nossas páginas
+                    </button>
+                </div>
             </div>
         </section>
         <section id="world-change">
-            <p>Transforme o mundo com a gente</p>
+            <h2 id="change-text">Transforme o mundo com a gente</h2>
             <picture>
                 <img src="./assets/images/woman-code.png" alt="Mulher com projeção de códigos em todo o seu corpo.">
             </picture>
