site finished and conclusion - challange trilha css 01

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
 
     <main>
-        <section id="course-content">
-            <div class="section-content">
+        <section id="section-content">
+            <div class="modules-content">
                 <h2>O que vou aprender?</h2>
                 <p>Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.</p>
                 <div class="module-list">
@@ -37,26 +37,31 @@
                 </div>
             </div>
         </section>
-        <section id="world-change">
-            <h2 id="change-text">Transforme o mundo com a gente</h2>
-            <picture>
-                <img src="./assets/images/woman-code.png" alt="Mulher com projeção de códigos em todo o seu corpo.">
-            </picture>
+
+        <section id="section-world-change">
+            <div class="world-change-content">
+                <h2 id="change-text">Transforme o mundo <br> com a gente</h2>
+            </div>
         </section>
 
         <section id="professional-challenges">
-            <picture>
-                <img src="./assets/images/professional-challenges.png" alt="Jovem segurando tablet e perfis de desenvolvedores exibidos ao redor.">
-            </picture>
-            <p>Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas acessam a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, além do conhecimento técnico. A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.</p>
+            <div class="challenges-content">
+                <h2>Evolua e encare novos desafios profissionais</h2>
+                <picture>
+                    <img src="./assets/images/professional-challenges.png" alt="Jovem segurando tablet e perfis de desenvolvedores exibidos ao redor.">
+                </picture>
+                <p>Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas acessam a nossa plataforma em busca dos talentos mais criativos, dinâmicos e colaborativos, além do conhecimento técnico. A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.</p>
+            </div>
         </section>
     </main>
 
     <footer>
-        <picture>
-            <img class="dio-logo" src="./assets/images/dio-logo.png" alt="">
-        </picture>
-        <p>Acesse <a href="https://www.dio.me/" target="_blank">dio.me</a> e se cadastre agora</p>
+        <div class="footer-content">
+            <picture>
+                <img class="dio-logo" src="./assets/images/dio-logo.png" alt="">
+            </picture>
+            <p>Acesse <a href="https://www.dio.me/" target="_blank">dio.me</a> e se cadastre agora</p>
+        </div>
     </footer>
 </body>
 </html>
